--- a/javascript-browser/src/live-from-file.html
+++ b/javascript-browser/src/live-from-file.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <script src="https://unpkg.com/@gladiaio/sdk@0.5.2"></script>
     <title>Gladia - Live from file</title>
 
     <style>
@@ -69,18 +70,6 @@
     </div>
 
     <script>
-      /**
-       * @returns {{promise: Promise<any>; resolve(value: any): void; reject(err: any): void;}}
-       */
-      function deferredPromise() {
-        const deferred = {};
-        deferred.promise = new Promise((resolve, reject) => {
-          deferred.resolve = resolve;
-          deferred.reject = reject;
-        });
-        return deferred;
-      }
-
       async function extractAudioFileData(audio) {
         const textDecoder = new TextDecoder();
         const buffer = await audio.arrayBuffer();
@@ -129,24 +118,6 @@
         };
       }
 
-      async function initiateSession(gladiaKey, config) {
-        const response = await fetch(`https://api.gladia.io/v2/live`, {
-          method: 'POST',
-          headers: {
-            'Content-Type': 'application/json',
-            'X-GLADIA-KEY': gladiaKey,
-          },
-          body: JSON.stringify(config),
-        });
-        if (!response.ok) {
-          const message = `${response.status}: ${
-            (await response.text()) || response.statusText
-          }`;
-          throw new Error(message);
-        }
-        return await response.json();
-      }
-
       /** @type {HTMLFormElement} */
       const form = document.querySelector('#form');
       /** @type {HTMLButtonElement} */
@@ -175,8 +146,7 @@
         finalsContainer.innerHTML = '';
         partialsContainer.textContent = '...';
 
-        /** @type {WebSocket | undefined} */
-        let socket;
+        let liveSession;
         let config;
         let audioData;
         let audioSrc = URL.createObjectURL(audioFile);
@@ -191,12 +161,9 @@
           submitButton.style.display = 'block';
           submitButton.textContent = 'Start streaming';
 
-          if (socket) {
-            socket.onopen = null;
-            socket.onerror = null;
-            socket.onclose = null;
-            socket.onmessage = null;
-            socket.close();
+          if (liveSession) {
+            liveSession.endSession();
+            liveSession = null;
           }
         };
 
@@ -205,27 +172,43 @@
           audioData = data;
           config = rest;
 
-          const { url } = await initiateSession(gladiaKey, config);
+          liveSession = new Gladia.GladiaClient({
+            apiKey: gladiaKey,
+          })
+            .liveV2()
+            .startSession({
+              ...config,
+              messages_config: {
+                receive_partial_transcripts: true,
+              },
+            });
 
-          const socketPromise = deferredPromise();
+          liveSession.on('message', (message) => {
+            if (message.type !== 'transcript') {
+              return;
+            }
 
-          // Initializes the websocket
-          socket = new WebSocket(url);
-          socket.onopen = () => {
-            socketPromise.resolve(true);
-          };
-          socket.onerror = () => {
-            socketPromise.reject(new Error(`Couldn't connect to the server`));
-          };
-          socket.onclose = (event) => {
-            socketPromise.reject(
-              new Error(
-                `Server refuses the connection: [${event.code}] ${event.reason}`,
-              ),
-            );
-          };
-
-          await socketPromise.promise;
+            let prefix = '- ';
+            if (config.channels > 1) {
+              prefix = `${message.data.utterance.channel}: `;
+            }
+            if (message.data.is_final) {
+              const div = document.createElement('div');
+              div.textContent = `${prefix}${message.data.utterance.text}`;
+              finalsContainer.appendChild(div);
+              partialsContainer.textContent = '';
+            } else {
+              partialsContainer.textContent = `${prefix}${message.data.utterance.text}`;
+            }
+          });
+          liveSession.on('error', (error) => {
+            const message = `An error occurred: ${error}`;
+            window.alert(message);
+            console.error(message, error);
+          });
+          liveSession.on('ended', () => {
+            stop();
+          });
         } catch (err) {
           window.alert(
             `Error during the initialization: ${err?.message || err}`,
@@ -235,56 +218,35 @@
           return;
         }
 
-        // Register new listeners
-        socket.onopen = null;
-        socket.onerror = null;
-        socket.onclose = (event) => {
-          if (event.code === 1000) {
-            stop();
-            return;
-          }
-
-          const message = `Lost connection to the server: [${event.code}] ${event.reason}`;
-          window.alert(message);
-          console.error(message);
-          stop();
-        };
-        socket.onmessage = (event) => {
-          const message = JSON.parse(event.data);
-          console.log(message);
-          if (message?.type === 'transcript') {
-            let prefix = '- ';
-            if (config.channels > 1) {
-              prefix = `${message.data.utterance.channel}: `;
-            }
-            if (message.data.is_final) {
-              finalsContainer.innerHTML += `<div>${prefix}${message.data.utterance.text}</div>`;
-              partialsContainer.textContent = '';
-            } else {
-              partialsContainer.textContent = `${prefix}${message.data.utterance.text}`;
-            }
-          }
-        };
-
         submitButton.textContent = 'Streaming…';
 
         resultContainer.style.display = 'block';
 
-        // Start the streaming
-        audioPlayer.src = audioSrc;
-        audioPlayer.play();
+        // Start the streaming when audio is ready
+        const startPlayback = async () => {
+          audioPlayer.play();
 
-        // Send chunk of 50ms
-        const chunkDuration = 50;
-        const bytesPerSample = config.bit_depth / 8;
-        const bytesPerSecond =
-          config.sample_rate * config.channels * bytesPerSample;
-        const chunkSize = Math.round((chunkDuration / 1000) * bytesPerSecond);
-        for (let i = 0; i < audioData.byteLength; i += chunkSize) {
-          socket.send(audioData.slice(i, i + chunkSize));
-          await new Promise((resolve) => setTimeout(resolve, chunkDuration));
+          // Send chunk of 50ms
+          const chunkDuration = 50;
+          const bytesPerSample = config.bit_depth / 8;
+          const bytesPerSecond =
+            config.sample_rate * config.channels * bytesPerSample;
+          const chunkSize = Math.round((chunkDuration / 1000) * bytesPerSecond);
+          for (let i = 0; i < audioData.byteLength; i += chunkSize) {
+            liveSession.sendAudio(audioData.slice(i, i + chunkSize));
+            await new Promise((resolve) => setTimeout(resolve, chunkDuration));
+          }
+          liveSession.stopRecording();
+        };
+
+        audioPlayer.src = audioSrc;
+        if (audioPlayer.readyState >= audioPlayer.HAVE_ENOUGH_DATA) {
+          startPlayback();
+        } else {
+          audioPlayer.addEventListener('canplaythrough', startPlayback, {
+            once: true,
+          });
         }
-        socket.send(JSON.stringify({ type: 'stop_recording' }));
       });
     </script>
   </body>
